added drag drop for details div(it will switch the content)

--- a/index.html
+++ b/index.html
@@ -32,55 +32,55 @@
  </div>
 
  <div class="data">
-   <div class="details wind">
+   <div class="details wind" draggable="true">
     <h3>Wind</h3>
     <div class="break-card"></div>
     <h1 class="speed"></h1>
     <p></p>
    </div>
-   <div class="details humid">
+   <div class="details humid" draggable="true">
     <h3>Humidity</h3>
     <div class="break-card"></div>
     <h1 class="hum"></h1>
     <p></p>
    </div>
-   <div class="details realfeel">
+   <div class="details realfeel" draggable="true" >
     <h3>Real Feel</h3>
     <div class="break-card"></div>
     <h1 class="real"></h1>
     <p></p>
    </div>
-   <div class="details uv">
+   <div class="details uv" draggable="true">
     <h3>Co-ordinates</h3>
     <div class="break-card"></div>
     <p class="lat"></p>
     <p></p>
    </div>
-   <div class="details">
+   <div class="details" draggable="true">
     <h3>Pressure</h3>
     <div class="break-card"></div>
     <h1 class="pressure"></h1>
     <p></p>
    </div>
-   <div class="details rain">
+   <div class="details rain" draggable="true">
     <h3>Pressure Level</h3>
     <div class="break-card"></div>
     <p class="grnd_level"></p>
     <p></p>
    </div>
-   <div class="details temp">
+   <div class="details temp" draggable="true">
     <h3>Temp history</h3>
     <div class="break-card"></div>
     <p class="max"><i class='bx bx-up-arrow' ></i> </p>
     <p><i class='bx bx-up-arrow bx-rotate-180' ></i> </p>
    </div>
-   <div class="details sun">
+   <div class="details sun" draggable="true">
     <h3>Sun</h3>
     <div class="break-card"></div>
     <p class="rise">Rise</p>
     <p>Set</p>
    </div>
-   <div class="details moon">
+   <div class="details moon" draggable="true">
     <h3>Visibility</h3>
     <div class="break-card"></div>
     <p class="visible"></p>
